Bug 7534 - suspend to disk fails if gdb is suspended with a traced child
Summary: suspend to disk fails if gdb is suspended with a traced child
Status: CLOSED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-15 23:32 UTC by maurice barnum
Modified: 2007-02-07 04:30 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.19-rc6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
dmesg output after failed suspend (21.45 KB, text/plain)
2006-11-15 23:35 UTC, maurice barnum
Details
kernel config (47.25 KB, text/plain)
2006-11-15 23:36 UTC, maurice barnum
Details
A fix (616 bytes, patch)
2006-11-16 06:57 UTC, Rafael J. Wysocki
Details | Diff

Description maurice barnum 2006-11-15 23:32:55 UTC
Most recent kernel where this bug did *NOT* occur: unknown. occurs in 2.6.17,
2.6.18, and 2.6.19-sw2
Distribution: fedora core 5
Hardware Environment: thinkpad x32
Problem Description:

suspend-to-disk is unable to freeze processes if a gdb with a traced child is
suspended (SIGTSTP).

Steps to reproduce:

1)gdb /bin/cat
2) ^Z
3) ^Z
4) pm-hibernate

config and dmesg output attached.
Comment 1 maurice barnum 2006-11-15 23:35:18 UTC
Created attachment 9525 [details]
dmesg output after failed suspend
Comment 2 maurice barnum 2006-11-15 23:36:21 UTC
Created attachment 9526 [details]
kernel config
Comment 3 Rafael J. Wysocki 2006-11-16 06:57:51 UTC
Created attachment 9530 [details]
A fix

This patch should help.
Comment 4 Adrian Bunk 2007-02-06 20:27:29 UTC
Maurice, does this patch fix your problem?
Comment 5 Rafael J. Wysocki 2007-02-07 04:30:37 UTC
Well, I think we should close this entry and let Maurice repoen it if need 
be. ;-)

Note You need to log in before you can comment on or make changes to this bug.